@@ -5,22 +5,22 @@
   overflow: hidden; 
 }
 
-.panel-2col-stacked div div { 
-  margin: .5em;
+.panel-2col-stacked div > div {
+  margin: .5px;
 }
 
 .panel-2col-stacked .panel-col-top,
-.panel-2col-stacked .panel-col-bottom { 
-  width: 100%; 
+.panel-2col-stacked .panel-col-bottom {
+  width: 99.9%;
   clear: both;
 }
-.panel-2col-stacked .panel-col-first { 
-  float: left; 
-  width: 50%; 
+.panel-2col-stacked .panel-col-first {
+  float: left;
+  width: 47%;
 }
-.panel-2col-stacked .panel-col-last { 
-  float: left; 
-  width: 50%; 
+.panel-2col-stacked .panel-col-last {
+  float: right;
+  width: 47%;
 }
 .panel-clearer {
   clear: both;
